<resources>
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lending App</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Welcome">Welcome Back,</string>
    <string name="lgncnt">Login to continue.</string>
    <string name="frgt">Enter The Email To Reset Your Password</string>
    <string name="reset">Reset Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="facebook">Sign in With Facebook</string>
    <string name="google">Sign in With Google</string>
    <string name="account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="first_string_title">Lend Your Goods</string>
    <string name="second_string_title">Exchange Goods</string>
    <string name="third_string_title">Chat and Buy</string>
    <string name="first_string_desc">Rent your goods or take rent of goods for a low reasonable price </string>
    <string name="second_string_desc">Dont want to buy or rent? Well then, exchange it for one of your product</string>
    <string name="third_string_desc">Loved a product? Well send a quick text to the owner and make a deal</string>
    <string name="textview">Ad Details</string>
    <string name="button">Next</string>
    <string name="name">Ad title</string>
    <string name="name2">Product description</string>
    <string name="name3">Price</string>
    <string name="name4">Location</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_product_name">Enter Your Product Name</string>
    <string name="browse_image">Browse Image</string>
    <string name="post_add">Post Add</string>
    <string name="todo">TODO</string>
    <string name="tv3">Price</string>
    <string name="tv1">Ad title</string>
    <string name="tv4">Location</string>
    <string name="ad_details">Ad Details</string>
    <string name="describe_your_product_here">describe your product here</string>
    <string name="description">Description</string>
    <string name="ad_title">Ad title</string>
    <string name="price1">Price</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="location2">Location</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="display_name">Display Name</string>


</resources>