<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".PostAdd.PostPhoto">


    <ImageView
        android:id="@+id/img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/browse"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6ad3d6"
        android:padding="10dp"
        android:text="@string/browse_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/upload"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#6ad3d6"
        android:padding="10dp"
        android:text="@string/post_add"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintVertical_bias="0.865"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>